syntax = "proto3";
package to.etc.puzzler.daemon.rpc.messages;

// The challenge format sent by the hub to a client or server connecting
message HelloChallenge {
    string serverVersion = 1;
    bytes challenge = 2;
}

// A server sends this response. If its challenge response matches the hub's key
// then the server is allowed
message ServerHeloResponse {
    string serverVersion = 1;
    bytes challengeResponse = 2;
}

//-- A client sends this response. Its challenge will be forwarded to a server it addresses
message ClientHeloResponse {
    string clientVersion = 1;
    bytes challengeResponse = 2;
}

message AuthResponse {
}

message ErrorResponse {
    string code = 1;
    string text = 2;
    string details = 3;
    string extraMessage = 4;
    string extraBytes = 5;
}

message Envelope {
     int32 version = 1;
     string sourceId = 2;
     string targetId = 3;
     string command = 4;
     string commandId = 5;
     string dataFormat = 6;

     oneof payload {
         HelloChallenge challenge  = 10;
         ServerHeloResponse heloServer = 11;
         ClientHeloResponse heloClient = 12;
         AuthResponse auth = 13;
         ErrorResponse error = 14;
     }
}
